# smol.router

./: .gitignore  Makefile  README.md  pyproject.toml  router.example.json
.github/workflows/: ci.yml
data/: seed.jsonl
docs/: astro.config.mjs  package.json  wrangler.jsonc
docs/src/components/: Footer.astro  Header.astro
docs/src/layouts/: Docs.astro
docs/src/pages/: index.astro  quickstart.astro  sdk.astro  training.astro
examples/: benchmark.config.example.json  benchmark_pipeline.py  benchmark_prompts.example.jsonl
src/smol_router/: benchmark.py  cli.py  evaluate.py  server.py
src/tiny_router/: __init__.py  cli.py  config.py  data.py  errors.py  evaluate.py  features.py  model.py  policy.py  sdk.py  server.py  types.py
tests/: test_benchmark.py  test_cli.py  test_config.py  test_errors.py  test_fuzz.py  test_router.py  test_sdk.py  test_server.py
