[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-capability-router"
version = "0.1.0"
description = "A tiny, cost-aware model capability router"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Tiny Router contributors" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "hypothesis>=6"]

[project.scripts]
tiny-router = "tiny_router.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

